<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:facebook="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        android:weightSum="10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:layout_weight="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_menu_home" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_end_login"
            android:layout_marginStart="@dimen/margin_start_login"
            android:layout_marginTop="16dp"
            android:layout_weight="6"
            app:layout_constraintBottom_toTopOf="@+id/progressBarLoggingIn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivLogo">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tiEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_above="@id/tiPassword"
                android:layout_marginTop="16dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/inputRegisterEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email"
                    android:singleLine="true"
                    android:textColor="@color/grey_soft"
                    android:textSize="18sp"
                    tools:text="test@test@gmail.com" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tiPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_above="@id/tvForgottenPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tiEmail">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/inputRegisterPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textColor="@color/grey_soft"
                    android:textSize="18sp"
                    tools:text="Geslo" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/tvForgottenPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="8dp"
                android:clickable="false"
                android:focusable="false"
                android:padding="8dp"
                android:text="@string/string_forgotten_password"
                android:textColor="@color/color_login_text"
                android:textSize="14sp"
                android:textStyle="bold"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tiPassword" />

            <Button
                android:id="@+id/btnNormalRegister"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:background="@color/orange_dark"
                android:focusable="false"
                android:text="@string/register"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvForgottenPassword" />

        </android.support.constraint.ConstraintLayout>

        <ProgressBar
            android:id="@+id/progressBarRegister"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:indeterminate="true"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>